[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -165.5
margin_right = 376.0
margin_bottom = 165.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ilha 1" type="Button" parent="VBoxContainer"]
margin_right = 752.0
margin_bottom = 20.0
text = "Ilha 1"

[node name="Ilha 2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 752.0
margin_bottom = 44.0
text = "Ilha 2"

[node name="Ilha 3" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 752.0
margin_bottom = 68.0
text = "Ilha 3"

[node name="Ilha 4" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 752.0
margin_bottom = 92.0
text = "Ilha 4"

[node name="Ilha 5" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 752.0
margin_bottom = 116.0
text = "Ilha 5"
[connection signal="pressed" from="VBoxContainer/Ilha 1" to="." method="go_to_ilha1"]
[connection signal="pressed" from="VBoxContainer/Ilha 2" to="." method="go_to_ilha2"]
[connection signal="pressed" from="VBoxContainer/Ilha 3" to="." method="go_to_ilha3"]
